# pdf_merger

./: .gitignore  Makefile  pyproject.toml
app/: main.py  merger.py
tests/: test_merger.py
