[project]
name = "pdf-merger"
version = "0.1.0"
description = "Simple Streamlit PDF merger"
requires-python = ">=3.13"
dependencies = [
    "pypdf>=6.2.0",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
    "watchdog>=6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
